# onlinetalk

client/build-client-Desktop-Debug/: Makefile  client  moc_display.cpp  ui_login.h
client/client/: CMakeLists.txt  client.cpp  client.pro  display.cpp  display.h  display.ui  login.cpp  login.h  login.ui  main.cpp  user.cpp  widget.cpp  widget.h
client/client/include/: client.h  login.hpp  mainwindow.hpp  onlineio.h  register.hpp  user.h  worker.h
client/client/src/: client.cpp  main.cpp  onlineio.cpp  user.cpp
client/debug/: CMakeCache.txt  Makefile  client  cmake_install.cmake  moc_login.cpp  ui_display.h
client/debug/client_autogen/6YEA5652QU/: moc_display.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_widget.cpp.d
client/release/: CMakeCache.txt  Makefile  cmake_install.cmake
client/release/MyClient_autogen/: moc_predefs.h  mocs_compilation.cpp
client/release/MyClient_autogen/6YEA5652QU/: moc_display.cpp  moc_display.cpp.d  moc_login.cpp.d  moc_widget.cpp  moc_widget.cpp.d
server/: CMakeCache.txt  CMakeLists.txt  main.cpp  msganalyse.cpp  msganalyse.h  mysqlpool.cpp  mysqlpool.h  onlineio.cpp  onlineio.h  readme.md  server.code-workspace  server.cpp  server.h  taskpackage.cpp  taskpackage.h  test  test.cpp  test.sql  test1  test1.cpp  threadpool.cpp  user.cpp  user.h
server/cmake/: FindHiredis.cmake  FindMySQLConnectorCpp.cmake
server/include/: onlineio.h  server.h  taskpackage.h  threadpool.h
server/readme/: readme.md
server/record/: record.md
server/server1.0/include/: msganalyse.h  mysqlpool.h  onlineio.h  server.h  taskpackage.h  user.h
server/server1.0/src/: msganalyse.cpp  mysqlpool.cpp  onlineio.cpp  server.cpp  taskpackage.cpp  user.cpp
server/server2.0/: CMakeLists.txt  main.cpp  tempmakefile
server/server2.0/Correspondence/: correspond.cpp  correspond.h
server/server2.0/MysqlPool/: createtable.sql  mysqlMethods.cpp  mysqlMethods.h  mysqlpool.cpp  mysqlpool.h
server/server2.0/RedisPool/: RedisMethods.cpp  RedisMethods.h  RedisPool.cpp  RedisPool.h  Redispool.h
server/server2.0/dataBase/: cmakelist.txt  dataBase.cpp  dataBase.h  dbConstants.h
server/server2.0/dataManager/: dataManager.cpp  dataManager.h
server/server2.0/eventHandler/: ehConstants.h  eventHandler.cpp  eventHandler.h
server/server2.0/eventManager/: eventManager.cpp  eventManager.h
server/server2.0/logSystem/: log.cpp  log.h
server/server2.0/message/: message.h
server/server2.0/msgAnalysis/: msgAnalysis.cpp  msgAnalysis.h  msgAnalysisConstants.h  msgAnalysisFSM.cpp  msgAnalysisFSM.h
server/server2.0/msgAnalysisStrategy/: msgAnalysisStrategy.cpp  msgAnalysisStrategy.h
server/server2.0/msgHandle/: msgHandle.cpp  msgHandle.h  msgHandleStrategy.cpp  msgHandleStrategy.h
server/server2.0/msgHandleStrategy/: msgHandleStrategy.cpp  msgHandleStrategy.h
server/server2.0/networkio/: networkio.cpp  networkio.h  serializationMethod.cpp  serializationMethod.h
server/server2.0/serializationMethod/: serializationMethod.cpp  serializationMethod.h
server/server2.0/socketManager/: socketData.cpp  socketData.h  socketManager.cpp  socketManager.h  socketVec.cpp  socketVec.h
server/server2.0/socketNetworkIo/: socketNetworkIo.cpp  socketNetworkIo.h
server/server2.0/threadPool/: task.cpp  task.h  threadPool.cpp  threadPool.h
server/server2.0/timer/: timer.cpp  timer.h
server/server2.0/userManager/: userInfo.cpp  userInfo.h  userManager.cpp  userManager.h
server/src/: main.cpp  msganalyse.cpp  mysqlpool.cpp  onlineio.cpp  server.cpp  taskpackage.cpp  threadpool.cpp  user.cpp
